--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/blog.webp" alt="Image" class="project-img">
-                        <div class="text"><a href="#">Blog</a> </div>
-                        <p>My personal blogpost where I post short stories and other literature.(work on progress)</p>
+                        <img src="images/randomquote.png" alt="Image" class="project-img">
+                        <div class="text"><a href="https://niraj-07.github.io/RandomQuote">Quote Generator</a> </div>
+                        <p>Generates a random quote using a third party API.</p>
                     </div>
                 </div>
                </div>
