--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="column right">
                     <div class="text">I'm Niraj and I'm a <span class="typing-2"></span></div>
                     <p>
-                        My name is Niraj Bhattarai. A tech enthusiast teenager constantly exploring the domain of tech and computer science. I am a frontend developer and know quite a bit of frontend technologies. I also write english literature(mostly short stories). On a never ending journey of learning new things.
+                        My name is Niraj Bhattarai. A tech enthusiast teenager constantly exploring the domain of tech and computer science. I am a frontend developer and know some frontend technologies. On a never ending journey of learning new things.<br>Currently learning:JAVA
     
                     </p>
                 </div>
