--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="box">
                         <img src="images/pen.webp" alt="Image" class="project-img">
                         <div class="text">Writting</div>
-                        <p>I love writting english literature(mostly short stories).</p>
+                        <p>I love reading and writting english literature.</p>
                     </div>
                 </div>
                 <div class="card">
