--- a/index.html
+++ b/index.html
@@ -3,30 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Niraj Bhattarai | Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
+    <div class="cursor-dot"></div>
+    <div class="cursor-outline"></div>
+
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfolio</a></div>
+            <div class="logo"><a href="#">Niraj<span>.Dev</span></a></div>
             <ul class="menu">
-                <li><a href="#home" class="menu-btn">Home</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Project </a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#hobbies" class="menu-btn">Hobbies</a></li>
-                <li><a href="#contact" class="menu-btn">Contact</a></li>
+                <li><a href="#home" class="menu-btn-link">Home</a></li>
+                <li><a href="#about" class="menu-btn-link">About</a></li>
+                <li><a href="#projects" class="menu-btn-link">Projects</a></li>
+                <li><a href="#skills" class="menu-btn-link">Skills</a></li>
+                <li><a href="#contact" class="menu-btn-link">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -34,214 +33,128 @@
         </div>
     </nav>
 
-    <!-- home section start -->
     <section class="home" id="home">
+        <div id="particles-js"></div>
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Niraj Bhattarai</div>
-                <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">See More</a>
+                <div class="text-3">CS Student & <span class="typing">Developer</span></div>
+                <a href="#projects">View My Work</a>
             </div>
         </div>
     </section>
 
-    <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About me</h2>
+            <h2 class="title animate-on-scroll">About Me</h2>
             <div class="about-content">
-                <div class="column left">
-                    <img src="images/eren-pfp.jpg" alt="my photo">
+                <div class="column left animate-on-scroll">
+                    <img src="images/Headshot.jpeg" alt="A professional headshot of Niraj Bhattarai">
                 </div>
-                <div class="column right">
-                    <div class="text">I'm Niraj and I'm a <span class="typing-2"></span></div>
-                    <p>
-                        My name is Niraj Bhattarai. A tech enthusiast teenager constantly exploring the domain of tech and computer science. I am a frontend developer and know some frontend technologies. On a never ending journey of learning new things.<br>Currently learning:JAVA
-    
-                    </p>
+                <div class="column right animate-on-scroll">
+                    <div class="text">I'm a builder, a problem-solver, and a lifelong learner.</div>
+                    <p>As a Computer Science sophomore at Texas State University with a 4.0 GPA, I'm driven by a passion for turning complex challenges into elegant software solutions. My journey is about more than just writing code; it's about building tools that work seamlessly and collaborating effectively to bring ideas to life. I thrive in environments where I can learn from others and contribute to a shared goal.</p>
+                    <a href="Niraj_Bhattarai_Resume_Sep2025.pdf" download class="resume-btn">Download Resume</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- services section start -->
-    <section class="services" id="services">
+    <section class="projects" id="projects">
         <div class="max-width">
-            <h2 class="title">My projects</h2>
-            <br>
-            <div class="serv-content">
-                <div class="card">
+            <h2 class="title animate-on-scroll">My Projects</h2>
+            <div class="project-content">
+                <div class="card animate-on-scroll" data-tilt>
                     <div class="box">
-                        <img src="images/note.png" alt="Image" class="project-img">
-                        <div class="text"><a href="https://niraj-07.github.io/NoteApp/">Note App</a></div>
-                        <p>A simple note taking app made using HTML,CSS and Javascript.</p>
+                        <img src="images/job_tracker_home.png" alt="Job Application Tracker Project Screenshot">
+                        <div class="text">Job Application Tracker</div>
+                        <p>To escape the chaos of tracking internship applications in a spreadsheet, I built this full-stack app. It's a personal dashboard to manage every stage of the job hunt, born from a need for organization.</p>
+                        <div class="project-links">
+                            <a href="https://job-tracker-3jrp.onrender.com" target="_blank"><i class="fas fa-globe"></i> Live Demo</a>
+                            <a href="https://github.com/niraj-07/Job-Tracker" target="_blank"><i class="fab fa-github"></i> View Code</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card animate-on-scroll" data-tilt>
                     <div class="box">
-                       <img src="images/wacker.png" alt="Image" class="project-img">
-                        <div class="text"><a href="https://niraj-07.github.io/Wacker/">Wacker</a></div>
-                        <p>A cool game made using HTML,CSS and Javascript.</p>
+                        <img src="images/sudoku-visual.webp" alt="Sudoku Solver Project Screenshot">
+                        <div class="text">Sudoku Solver</div>
+                        <p>This academic project was my deep dive into collaborative development. Working in a team, we tackled complex algorithms and mastered Git workflows to build a robust and efficient solver.</p>
+                        <div class="project-links">
+                             <a href="https://github.com/oasis-pandey/SudokuProject" target="_blank"><i class="fab fa-github"></i> View Code</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card animate-on-scroll" data-tilt>
                     <div class="box">
-                        <img src="images/randomquote.png" alt="Image" class="project-img">
-                        <div class="text"><a href="https://niraj-07.github.io/RandomQuote">Quote Generator</a> </div>
-                        <p>Generates a random quote using a third party API.</p>
+                        <img src="images/wacker.png" alt="Wacker Game Project Screenshot">
+                        <div class="text">Wacker Game</div>
+                        <p>A fun exploration of vanilla JavaScript, DOM manipulation, and event handling. This project was about creating a responsive and entertaining user experience from scratch, with a bit of personal flair.</p>
+                        <div class="project-links">
+                            <a href="https://niraj-07.github.io/Wacker" target="_blank"><i class="fas fa-globe"></i> Live Demo</a>
+                            <a href="https://github.com/niraj-07/Wacker" target="_blank"><i class="fab fa-github"></i> View Code</a>
+                        </div>
                     </div>
                 </div>
-               </div>
             </div>
         </div>
     </section>
 
-    <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My skills</h2>
+            <h2 class="title animate-on-scroll">My Skills</h2>
             <div class="skills-content">
-                <div class="column left">
-                    <div class="text">My skills & experiences.</div>
-                    <p>I have made a lot of personal project using technologies like HTML5, CSS3, Bootstrap and Vanila Javascript. </p>
-                    <a href="#">Read more</a>
+                <div class="column left animate-on-scroll">
+                    <div class="text">My Technical Toolkit</div>
+                    <p>My academic and project work has given me a strong foundation in several key areas of software development. I am proficient in both front-end and back-end technologies and comfortable working with a variety of development tools and methodologies.</p>
                 </div>
-                <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JavaScript</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>C</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line php"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Web design</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line mysql"></div>
-                    </div>
+                <div class="column right animate-on-scroll">
+                    <div class="bars"><div class="info"><i class="fas fa-code"></i><span>Python, C++, JavaScript</span></div></div>
+                    <div class="bars"><div class="info"><i class="fas fa-desktop"></i><span>HTML, CSS, Flask</span></div></div>
+                    <div class="bars"><div class="info"><i class="fas fa-tools"></i><span>Git/GitHub, Bash, VS Code</span></div></div>
+                    <div class="bars"><div class="info"><i class="fas fa-tasks"></i><span>Jira, Notion, Miro</span></div></div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="services" id="hobbies">
-        <div class="max-width">
-            <h2 class="title">My hobbies</h2>
-            <br>
-            <div class="serv-content">
-                <div class="card">
-                    <div class="box">
-                        <img src="images/pen.webp" alt="Image" class="project-img">
-                        <div class="text">Writting</div>
-                        <p>I love reading and writting english literature.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                       <img src="images/research.jpg" alt="Image" class="project-img">
-                        <div class="text">Research</div>
-                        <p>I love reading about topics from different domain and writting about them.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/coding.jpg" alt="Image"class="project-img">
-                        <div class="text">Programming</div>
-                        <p>I love coding and writting programs which solves real world problems.</p>
-                    </div>
-                </div>
-               </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact me</h2>
+            <h2 class="title animate-on-scroll">Contact Me</h2>
             <div class="contact-content">
-                <div class="column left">
-                    <div class="text">Get in Touch</div>
-                    <p>If you want to have a chat, just send a mail. I will try to reply as soon as I am free.</p>
+                <div class="column left animate-on-scroll">
+                    <div class="text">Let's Connect</div>
+                    <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of an amazing team. Feel free to reach out!</p>
                     <div class="icons">
-                        <div class="row">
-                            <i class="fas fa-user"></i>
-                            <div class="info">
-                                <div class="head">Name</div>
-                                <div class="sub-title">Niraj BHattarai</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">Pokhara, Nepal</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-envelope"></i>
-                            <div class="info">
-                                <div class="head">Email</div>
-                                <div class="sub-title">bniraj2061@gmail.com</div>
-                            </div>
-                        </div>
+                        <div class="row"><i class="fas fa-user"></i><div class="info"><div class="head">Name</div><div class="sub-title">Niraj Bhattarai</div></div></div>
+                        <div class="row"><i class="fas fa-map-marker-alt"></i><div class="info"><div class="head">Address</div><div class="sub-title">San Marcos, TX</div></div></div>
+                        <div class="row"><i class="fas fa-envelope"></i><div class="info"><div class="head">Email</div><div class="sub-title">bniraj2061@gmail.com</div></div></div>
                     </div>
                 </div>
-                <div class="column right">
-                    <div class="text">Message me</div>
-                    <form action="#">
+                <div class="column right animate-on-scroll">
+                    <div class="text">Send a Message</div>
+                    <form id="contact-form" action="#">
                         <div class="fields">
-                            <div class="field name">
-                                <input type="text" placeholder="Name" required>
-                            </div>
-                            <div class="field email">
-                                <input type="email" placeholder="Email" required>
-                            </div>
+                            <div class="field name"><input name="name" type="text" placeholder="Name" required></div>
+                            <div class="field email"><input name="email" type="email" placeholder="Email" required></div>
                         </div>
-                        <div class="field">
-                            <input type="text" placeholder="Subject" required>
-                        </div>
-                        <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
-                        </div>
-                        <div class="button-area">
-                            <button type="submit">Send message</button>
-                        </div>
+                        <div class="field"><input name="subject" type="text" placeholder="Subject" required></div>
+                        <div class="field textarea"><textarea name="message" cols="30" rows="10" placeholder="Message.." required></textarea></div>
+                        <div class="button-area"><button type="submit">Send Message</button></div>
+                        <p id="form-status"></p>
                     </form>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- footer section start -->
     <footer>
-        <span>Created By Niraj |  2024 All rights reserved.</span>
+        <span>Designed & Built by Niraj Bhattarai | &copy; 2025</span>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.9.3/tsparticles.bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.2/dist/vanilla-tilt.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
